# Arcade

./: .gitignore  CMakeLists.txt  README.md
assets/gameover/: ascii.txt
assets/title/: ascii.txt
assets/victory/: ascii.txt
doc/: Doxyfile
doc/html/: _a_display_module_8hpp.html  _a_display_module_8hpp__incl.map  _a_display_module_8hpp__incl.md5  _a_display_module_8hpp_source.html  _a_game_module_8hpp.html  _a_game_module_8hpp__incl.map  _a_game_module_8hpp__incl.md5  _a_game_module_8hpp_source.html  _core_8hpp.html  _core_8hpp__incl.map  _core_8hpp__incl.md5  _core_8hpp_source.html  _d_l_loader_8hpp.html  _d_l_loader_8hpp__dep__incl.map  _d_l_loader_8hpp__dep__incl.md5  _d_l_loader_8hpp__incl.map  _d_l_loader_8hpp__incl.md5  _d_l_loader_8hpp_source.html  _i_display_module_8hpp.html  _i_display_module_8hpp__dep__incl.map  _i_display_module_8hpp__dep__incl.md5  _module_type_8hpp.js  (+134 more)
include/: ADisplayModule.hpp  AGameModule.hpp  Core.hpp  DLLoader.hpp  IDisplayModule.hpp  IGameModule.hpp  KeyboardInput.hpp  ModuleType.hpp  Pixel.hpp  Title.hpp
lib/: CMakeLists.txt
lib/graphicals/arcade_ncurses/: CMakeLists.txt
lib/graphicals/arcade_ncurses/include/: DisplayNcurse.hpp
lib/graphicals/arcade_ncurses/src/: DisplayNcurse.cpp
lib/graphicals/arcade_sdl2/: CMakeLists.txt
lib/graphicals/arcade_sdl2/include/: DisplaySDL.hpp
lib/graphicals/arcade_sdl2/src/: DisplaySDL.cpp
lib/graphicals/arcade_sfml/: CMakeLists.txt
lib/graphicals/arcade_sfml/include/: DisplaySfml.hpp
lib/graphicals/arcade_sfml/src/: DisplaySfml.cpp
src/: CMakeLists.txt  Core.cpp  main.cpp
(+94 files in other folders)
